# geoenv-cli

./: .gitignore  CHANGES.txt  Makefile  README.md  geoenv  notes.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
commands/: __init__.py  core.py
geoenv/: geoenv.py  rich_argparse.py
geoenv/commands/: __init__.py  core.py  jupyter_lab.py  postgres.py  streamlit.py
