[metadata]
name = geoenv-cli
version = 0.1.0
author = Dustin Sampson
url = https://github.com/gridcell/{name}
description = CLI for managing a docker based geospatial environment.
license = MIT
platform = posix
long_description = file: README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    geoenv = geoenv